@startuml
'https://plantuml.com/class-diagram

Trajectoire *-- MGD
Trajectoire *-- MGI
Trajectoire *-- MDI
Trajectoire *-- MDD

class Trajectoire {
Trajectoire(A, B, theta, V)
simulation()
display(mvt=True, op=True, O5=True, threeD=True, robot=True, q_n=True)
}

class MGI {
MGI()
calculate_qn()
}

class MGD {
MGD()
get_T_0_N()
generate_T_i_j(i, j):
get_values(list_qi)
get_values_robot(list_qi)
}

class MDD {
MDD()
get_values(list_qi, list_qdi)
}


class MDI {
MDI()
get_values(list_qi, X_d)
}


@enduml